# mdslides

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE_3rdPARTY  README.md  main.cpp  presentation.md  slide_config.txt  slides.cpp
cmake/: FindAllDependencies.cmake  vcpkg.cmake
include/: markdown_parser.hh  markdown_parser.hpp  ncurses_renderer.hh  presentation_controller.hpp  renderer_interface.hh  shell_command_selector.hh  shell_executor.hpp  shell_popup.hh  slide_element.hh  slide_renderer.hh  slide_renderer.hpp  slide_types.hpp  theme_config.hh  theme_manager.hpp
src/: main.cc  main.cpp  markdown_parser.cc  markdown_parser.cpp  ncurses_renderer.cc  presentation_controller.cpp  shell_command_selector.cc  shell_executor.cpp  shell_popup.cc  slide_element.cc  slide_renderer.cc  slide_renderer.cpp  theme_config.cc  theme_manager.cpp
